\name{NEWS}
\title{News for Package 'MixAll}


\section{Changes in MixAll version 1.4.1 (2018-04-04)}{
  \itemize{
  \item Bugs fixed
  \item Kernel Mixture Models (KMM) for mixed data implemented
  \item Adding clusterPredict method for class label prediction
  }
}

\section{Changes in MixAll version 1.2.0 (2015-10-14)}{
  \itemize{
    \item Learning method are now implemented.
    \item Function clusterHeterogeneous is renamed clusterMixedData
    \item MixAll is now based on rtkore and install the Clustering project
    of the STK++ library
    \item small bug corrections
  }
}


